5.3.4

FIXES
    - Fix lua error if enter an invalid player de/buff size


5.3.3

NEW
    - Added option to change player buff and debuff size
    - Fix error in afk mode

5.3.2

FIXES
    - Fixed "Show Player in Groupframes"
    - Fixed Alertframe issue
    - Fix lua error in actionbar settings


5.3.1

NEW
    - Added option "Show Player in Groupframes"
    - Make Alertframe moveable

FIXES
    - Fix riadframes not shown


5.3.0

NEW
    - World marker placement keybinds added to 'GW2 UI' section of default bindings UI
    - Added Corrupted Memento to scenario tracker in heroic vision
    - Added "Alert-System" (Module)
    - Rebuilt health globe for performance and graphical improvement
    - Rebuilt dodge bar for performance and graphical improvement
    - Dodge bar now works as a secure button and can be bound to a key
    - Added option for range indicator on mainbar
    - Added option to show player health and absorb as %, value or both
    - Settings menu improvements
    - Added HUD Scale option as a slider
    - Added Grid to Move HUD
    - Added back Chatbubbles in none protected areas
    - Added new options to bags: "Show scrap Icon", "Show Junk Icon", "Colouring professional bags", "Show Upgrade Icon", "Sell Junk automatically", "Show item level"
    - Added "Advanced Tooltips" with these options:
        - Show names in classcolor, show spec and ilvl while SHIFT is down, show AFK and DND Status, color level, etc.
        - Item Count: Shows how many Items you have in bags and in bank (from this item)
        - Spell/Item IDs: Shows the Spll/Item Id's in the tooltip
        - NPC IDs: Show the NPC ID in the tooltip
        - Current Mount: Display the current mount the player is riding, incl. source
        - Target Info: Shows who in your party/raid is targeting this target
        - Display the unit role in the tooltip
        - some more
    - Skin Blizzard Options (Interface and Settings), Addon List, Keybindings and Macro options