@@ -2,6 +2,7 @@
 
 FIXES
     - Fix lua error if enter an invalid player de/buff size
+    - Fix petbar auto moving in default position
 
 
 5.3.3
